fix: sonar issue.